##
## autogenerated ChangeLog -- don't edit
##

2005-12-24 Saturday 16:17  Rocky Bernstein <rocky@panix.com>

	* configure.ac, src/Makefile.am, src/main.c,
	tests/scripts/debugger/trace: various changes for Solaris without
	getopt

2005-12-24 Saturday 14:56  Rocky Bernstein <rocky@panix.com>

	* src/: getopt.c, getopt.h, getopt1.c: Reinstate getopt for Solaris
	(8,9, 10 too?)

2005-12-24 Saturday 14:53  Rocky Bernstein <rocky@panix.com>

	* tests/scripts/debugger/trace: Deal with varying shell output

2005-12-24 Saturday 04:37  Rocky Bernstein <rocky@panix.com>

	* doc/makedb.txt, po/da.po, po/de.po, po/es.po, po/fr.po, po/gl.po,
	po/he.po, po/hr.po, po/ja.po, po/ko.po, po/nl.po, po/pl.po,
	po/pt_BR.po, po/ru.po, po/sv.po, po/tr.po, po/zh_CN.po: Hope the
	last update before release.

2005-12-24 Saturday 04:32  Rocky Bernstein <rocky@panix.com>

	* NEWS, configure.ac, doc/make.texi, po/da.po, po/de.po, po/es.po,
	po/fr.po, po/gl.po, po/he.po, po/hr.po, po/ja.po, po/ko.po,
	po/nl.po, po/pl.po, po/pt_BR.po, po/ru.po, po/sv.po, po/tr.po,
	po/zh_CN.po, src/main.c, src/make.h, src/remake.c,
	tests/test_driver.pl, tests/scripts/options/symlinks,
	tests/scripts/variables/MAKE: Add -L (symlink) option from GNU Make
	3.81.

2005-12-24 Saturday 04:03  Rocky Bernstein <rocky@panix.com>

	* doc/make.texi: Update update date.

2005-12-24 Saturday 03:56  Rocky Bernstein <rocky@panix.com>

	* src/function.c: Add another function from Make 3.81

2005-12-24 Saturday 03:48  Rocky Bernstein <rocky@panix.com>

	* doc/make.texi: Add more function documentation from Make 3.81.

2005-12-24 Saturday 03:31  Rocky Bernstein <rocky@panix.com>

	* tests/scripts/functions/: abspath, realpath: Add realpath and
	abspath from make 3.81.

2005-12-24 Saturday 03:18  Rocky Bernstein <rocky@panix.com>

	* doc/make.texi: Update flavor documentation from Make 3.81.

2005-12-24 Saturday 03:13  Rocky Bernstein <rocky@panix.com>

	* tests/scripts/variables/flavors: Expand regression tests to make