@@ -2,6 +2,12 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2005-12-24 Saturday 16:38  Rocky Bernstein <rocky@panix.com>
+
+	* po/: da.po, de.po, es.po, fr.po, gl.po, he.po, hr.po, ja.po,
+	ko.po, nl.po, pl.po, pt_BR.po, ru.po, sv.po, tr.po, zh_CN.po: Yet
+	another commit before release.
+
 2005-12-24 Saturday 16:17  Rocky Bernstein <rocky@panix.com>
 
 	* configure.ac, src/Makefile.am, src/main.c,
